tests/parser/should_fail/let_timed_nametype.csp
P =
    let
        Timed (\ _ @ 1) {
            nametype X = {}
        }
    within P
